<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/reg_account"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:src="@drawable/account"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"/>

    <EditText
        android:id="@+id/reg_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/inputs"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/reg_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="@dimen/inputs"
        android:hint="@string/email"/>

    <EditText
        android:id="@+id/reg_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/inputs"
        android:inputType="textPassword"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/reg_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/inputs"
        android:inputType="textPassword"
        android:layout_marginTop="10dp"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/register"
        android:textAllCaps="false"
        android:textSize="16sp"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txt_already_have_an_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:textColor="@color/colorPrimary"
        android:text="@string/already_have_an_account"/>

</LinearLayout>