<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home_page"
        android:textSize="40sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"/>

    <TextView
        android:id="@+id/welcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:layout_below="@id/display"
        android:layout_marginTop="20dp"
        android:textSize="30sp"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/home_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/your_name"
        android:textSize="40sp"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/welcome"/>

</RelativeLayout>