<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="3"
    tools:context=".BookActivity">

   <RelativeLayout
       android:layout_width="match_parent"
       android:layout_height="0dp"
       android:padding="8dp"
       android:layout_weight="2">

       <ImageView
           android:id="@+id/cover_img"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           android:padding="3dp" />
   </RelativeLayout>

    <TextView
        android:id="@+id/bookTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/book_title"
        android:textSize="25sp"
        android:layout_marginTop="10dp"
        android:textAlignment="center"
        android:textColor="@color/colorAccent"/>

    <TextView
        android:id="@+id/bookCategory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/category"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <TextView
        android:id="@+id/bookDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/description"
        android:textAlignment="center"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/home"
        android:textAllCaps="false"
        android:layout_marginStart="20dp"
        android:onClick="home"
        android:layout_marginEnd="20dp"
        android:textSize="20sp"
        android:background="@drawable/button_background"
        android:textColor="@android:color/white"
        android:layout_marginTop="40dp"/>

</LinearLayout>