<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="8dp"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="30sp"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/loginImage"
        android:layout_width="126dp"
        android:layout_height="126dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="50dp"
        android:src="@drawable/account"/>

    <EditText
        android:id="@+id/login_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:layout_marginTop="20dp"
        android:textSize="@dimen/inputs"/>

    <EditText
        android:id="@+id/login_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textAllCaps="false"
        android:layout_marginTop="20dp"
        android:textSize="16sp"
        android:textColor="@android:color/white"/>

    <TextView
        android:id="@+id/not_yet_a_member"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/not_yet_a_member"
        android:textSize="22sp"
        android:textStyle="bold"
        android:layout_marginTop="70dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>